--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,7 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
+  color: var(--text-gray);
 }
 
 html{
@@ -18,10 +19,40 @@ html{
    font-size: 87.5%;
  }
 }
+
+a {
+  text-decoration: none;
+}
+button {
+  border: 0;
+  outline: 0;
+  border-radius: 7px;
+  cursor: pointer;
+  transition: 0.2s;
+
+  &:hover{
+    filter: brightness(0.9);
+  }
+  &:active{
+    transform: scale(0.95);
+    filter: brightness(0.9);
+  }
+  &:disabled{
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+}
+
+input{
+  outline: 0;
+}
+
 :root{
   --white: #FFFFFF;
 
   --blue-300: #616BC5;
 
   --green-300 : #5DB075;
+
+  --text-gray: #5F5F5F;
 }
