--- a/components/LoginInput/styles.module.scss
+++ b/components/LoginInput/styles.module.scss
@@ -6,7 +6,7 @@
   span{
     position: absolute;
     transform: translateY(-50%);
-    top: 50% ;
+    top: 60% ;
     left: 1rem;
     transition: 0.2s ease;
     pointer-events: none;
@@ -22,9 +22,11 @@
     width: 100%;
     height: 3rem;
     border: 0;
-    padding: 0 1rem;
+    padding: 0;
     border-bottom: 2px solid var(--text-gray);
     transition: 0.2s ease;
+
+    padding: 1rem 2.7rem 0 1rem;
 
     &.filled{
       border-bottom: 2px solid var(--blue-300);
@@ -33,7 +35,7 @@
   .icon {
     position: absolute;
     transform: translateY(-50%);
-    top: 50%;
+    top: 60%;
     right: 5%;
   }
 }
