--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,20 @@
   color: var(--text-gray);
 }
 
+:root{
+  --white: #FFFFFF;
+  --gray-50: #F8F7F7;
+  --gray-200: #C4C4C4;
+  --gray-250: #B6B3B3;
+
+  --blue-300: #616BC5;
+  --blue-350: #5A63B1;
+
+  --green-300 : #5DB075;
+
+  --text-gray: #5F5F5F;
+}
+
 html{
   scroll-behavior: smooth;
 }
@@ -41,18 +55,4 @@ button {
     cursor: not-allowed;
     opacity: 0.5;
   }
-}
-
-input{
-  outline: 0;
-}
-
-:root{
-  --white: #FFFFFF;
-
-  --blue-300: #616BC5;
-
-  --green-300 : #5DB075;
-
-  --text-gray: #5F5F5F;
 }
