--- a/components/SideBar/styles.module.scss
+++ b/components/SideBar/styles.module.scss
@@ -44,6 +44,7 @@
       width: 6rem;
       height: 3rem;
       background-color: var(--white);
+      z-index: 999;
 
       box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.289);
       border-radius: 7px;
