--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,7 @@
   --gray-150: #E4E4E4;
   --gray-200: #C4C4C4;
   --gray-250: #B6B3B3;
+  --gray-350: #979696;
   --gray-700: #808080;
 
   --blue-300: #616BC5;
@@ -61,7 +62,7 @@ button {
     opacity: 0.5;
   }
 }
-input{
+input, textarea{
   outline: 0;
 }
 
