--- a/components/SelectModal/styles.module.scss
+++ b/components/SelectModal/styles.module.scss
@@ -43,6 +43,8 @@
   main{
     width: 100%;
     height: 100%;
+    max-height: 20rem;
+    overflow-y: auto;
     padding: 0.5rem 0;
     display: flex;
     flex-direction: column;
