--- a/components/SelectModalButton/styles.module.scss
+++ b/components/SelectModalButton/styles.module.scss
@@ -1,12 +1,13 @@
 .container{
   width: 100%;
-  height: 3.5rem;
+  min-height: 3.5rem;
   border: 2px solid var(--blue-300);
   background-color: var(--white);
   display: flex;
   align-items: center;
   justify-content: space-between;
   user-select: none;
+  overflow: hidden;
 
   &:focus-within{
     .select_name{
@@ -16,7 +17,8 @@
   }
 
   .select_icon{
-    min-height: 100%;
+    min-height: 3.4rem;
+    overflow: hidden;
     background-color: var(--blue-300);
     min-width: 3.5rem;
     display: flex;
@@ -25,7 +27,7 @@
   }
   .select_name{
     width: 100%;
-    height: 100%;
+    min-height: 3.4rem;
     display: flex;
     align-items: center;
     justify-content: center;
