refact: files struture and add api to login

--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -50,6 +50,11 @@
         width: 100%;
       }
 
+      .error_message{
+        margin: 0.5rem auto;
+        color: red;
+      }
+
       .remember_forgot_password{
         display: flex;
         align-items: center;
