--- a/src/components/SideBar/styles.module.scss
+++ b/src/components/SideBar/styles.module.scss
@@ -18,7 +18,25 @@
     gap: 0.5rem;
   }
 
-  button {
+  a, button {
+    border: 0;
+    outline: 0;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: 0.2s;
+
+    &:hover{
+      filter: brightness(0.9);
+    }
+    &:active{
+      transform: scale(0.95);
+      filter: brightness(0.9);
+    }
+    &:disabled{
+      cursor: not-allowed;
+      opacity: 0.5;
+    }
+
     position: relative;
     width: 3.5rem;
     height: 3.5rem;
