fix: add <hr> to description break lines

--- a/src/components/ActivityItem/styles.module.scss
+++ b/src/components/ActivityItem/styles.module.scss
@@ -55,6 +55,7 @@
     }
     p{
       text-align: left;
+      width: 100%;
       text-overflow: ellipsis;
       font-size: 0.8rem;
       overflow: hidden;
