--- a/src/components/ActivitiesBar/styles.module.scss
+++ b/src/components/ActivitiesBar/styles.module.scss
@@ -88,5 +88,13 @@
     flex-direction: column;
     gap: 1.5rem;
     overflow-y: scroll;
+
+    .loading{
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 }
