--- a/src/components/InformationBar/ArchivesList/styles.module.scss
+++ b/src/components/InformationBar/ArchivesList/styles.module.scss
@@ -10,15 +10,6 @@
   gap: 1rem;
   cursor: pointer;
 
-  &.drag_active{
-    border-color: var(--green-300);
-    background-color: red;
-  }
-  &.drag_reject{
-    border-color: var(--red-300);
-    background-color: blue;
-  }
-
   img{
     width: 3.5rem;
     height: 3.5rem;
@@ -27,9 +18,13 @@
 
 .drag_active{
   border-color: var(--green-300);
-  background-color: red;
+  span{
+    color: var(--green-300);
+  }
 }
 .drag_reject{
   border-color: var(--red-300);
-  background-color: blue;
+  span{
+    color: var(--red-300);
+  }
 }
