--- a/src/components/DetailArchiveModal/styles.module.scss
+++ b/src/components/DetailArchiveModal/styles.module.scss
@@ -11,6 +11,9 @@
 .container{
   position: fixed;
   transform: translate(-50%, -50%);
+
+  display: flex;
+  flex-direction: column;
   border-radius: 7px;
   top: 50%;
   left: 50%;
@@ -30,6 +33,8 @@
   .main{
     margin: 1rem 0;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 
     .title{
      font-size: 1.5rem;
