feat: add img to archiveModal, alter next.config

--- a/src/components/DetailArchiveModal/styles.module.scss
+++ b/src/components/DetailArchiveModal/styles.module.scss
@@ -29,6 +29,12 @@
       height: 18rem;
       border-radius: 7px;
     }
+
+    .image{
+      width: 32rem;
+      height: 18rem;
+      border-radius: 7px;
+    }
   }
   .main{
     margin: 1rem 0;
