feat: add images support

--- a/src/components/ActivityContent/styles.module.scss
+++ b/src/components/ActivityContent/styles.module.scss
@@ -50,6 +50,13 @@
         width: 32rem;
         height: 18rem;
         border-radius: 7px;
+        background-color: var(--gray-50);
+      }
+      .image{
+        width: 32rem;
+        height: 18rem;
+        border-radius: 7px;
+        background-color: var(--gray-50);
       }
 
       > span{
