--- a/src/components/InformationBar/CategoriesList/styles.module.scss
+++ b/src/components/InformationBar/CategoriesList/styles.module.scss
@@ -42,7 +42,7 @@
     }
     button{
       padding: 0 1rem;
-      border-radius: 0px;
+      border-radius: 0 5px 5px 0px;
       background-color: var(--green-300);
       color: var(--white);
       font-size: 1rem;
@@ -82,8 +82,8 @@
   gap: 1rem;
 
   .category_item{
+    position: relative;
     user-select: none;
-    pointer-events: none;
     width: 100%;
     height: 4rem;
     background-color: var(--white);
@@ -91,6 +91,8 @@
     border-radius: 7px;
     overflow: hidden;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     .image_category_item{
       min-height: 100%;
@@ -114,6 +116,84 @@
       align-items: center;
       justify-content: center;
       font-size: 1rem;
+    }
+
+    button{
+      font-size: 0;
+      margin-right: 0.5rem;
+      right: 0.5rem;
+      min-width: 3rem;
+      min-height: 3rem;
+      background-color: transparent;
+      border: 2px solid var(--red-300);
+
+      img{
+        filter: invert(47%) sepia(23%) saturate(1210%) hue-rotate(315deg) brightness(99%) contrast(112%);
+      }
+      &:hover{
+        background-color: var(--red-300);
+
+        img{
+          filter: brightness(0) invert(1);
+        }
+      }
+    }
+  }
+}
+
+.Modalbackground{
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.241);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .modal_popup{
+    padding: 1rem;
+    border-radius: 7px;
+    background-color: var(--white);
+    width: 25rem;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.275);
+
+    h2{
+      text-align: center;
+      margin: 1rem 0;
+      span{
+        color: var(--blue-300);
+      }
+    }
+
+    .button_container_modal{
+      margin-top: 1rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      gap: 1rem;
+
+      button{
+        width: 50%;
+        padding: 1rem;
+        color: var(--white);
+        font-weight: 600;
+        font-size: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+
+        &:first-child{
+          background-color: var(--green-300);
+        }
+        &:last-child{
+          background-color: var(--red-300);
+        }
+      }
     }
   }
 }
