--- a/src/components/InputCreate/styles.module.scss
+++ b/src/components/InputCreate/styles.module.scss
@@ -37,6 +37,7 @@
   input, textarea {
     width: 100%;
     height: 3rem;
+    background-color: transparent;
     border: 2px solid var(--gray-350);
     padding: 0;
     border-radius: 7px;
