--- a/src/components/SelectModal/styles.module.scss
+++ b/src/components/SelectModal/styles.module.scss
@@ -40,14 +40,12 @@
     }
   }
 
-  main{
+  .main{
     width: 100%;
     height: 100%;
     max-height: 20rem;
     overflow-y: auto;
     padding: 0.5rem 0;
-    display: flex;
-    flex-direction: column;
     gap: 0.5rem;
     margin: 0.7rem 0;
     transition: 0.2s ease;
@@ -56,6 +54,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 1rem;
   }
 
   .button_container{
