--- a/src/components/CreateQuestionInput/styles.module.scss
+++ b/src/components/CreateQuestionInput/styles.module.scss
@@ -1,7 +1,7 @@
 .container{
   position: relative;
   padding: 1rem;
-  margin-top: 1rem;
+  // margin-top: 1rem;
   width: 100%;
   border-radius: 7px;
   background-color: var(--gray-50);
