fix: padding in content

--- a/src/components/ActivityContent/styles.module.scss
+++ b/src/components/ActivityContent/styles.module.scss
@@ -4,7 +4,8 @@
   width: 100%;
   background-color: var(--white);
 
-  padding: 2rem;
+  padding: 0 2rem;
+  padding-bottom: 3rem;
 
   main{
     display: flex;
