--- a/src/components/AnswersAndCategoriesContent/styles.module.scss
+++ b/src/components/AnswersAndCategoriesContent/styles.module.scss
@@ -1,9 +1,11 @@
 .container{
   position: relative;
+  max-height: 100vh;
+  overflow-y: scroll;
   z-index: 15;
   width: 100%;
   background-color: var(--white);
-  padding: 2rem;
+  padding: 0 2rem;
   padding-bottom: 3rem;
 
   > button{
@@ -27,7 +29,7 @@
     }
   }
   
-  main{
+  .main_content{
     width: 100%;
     margin-top: 1.5rem;
     display: flex;
