--- a/src/components/CreateActivityContent/styles.module.scss
+++ b/src/components/CreateActivityContent/styles.module.scss
@@ -3,7 +3,7 @@
   z-index: 15;
   width: 100%;
   background-color: var(--white);
-  padding: 2rem;
+  padding: 0 2rem;
   padding-bottom: 3rem;
   
   main{
