--- a/src/components/InformationBar/CategoriesList/styles.module.scss
+++ b/src/components/InformationBar/CategoriesList/styles.module.scss
@@ -80,6 +80,15 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-bottom: 2rem;
+
+  .loading{
+    width: 100%;
+    height: calc(100vh - 15rem);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
   .category_item{
     position: relative;
