--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -15,12 +15,14 @@
   --gray-350: #979696;
   --gray-700: #808080;
 
-  --blue-300: #616BC5;
-  --blue-350: #5A63B1;
+  --blue-300: #658FF3;
+  --blue-350: #5B7FD6;
 
 
-  --red-300: #E96057;
+  --red-300: #C85959;
   --red-350: #c94e45;
+  --red-900: #E23A3A;
+
 
   --green-300 : #5DB075;
   --green-350 : #4b925f;
