--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -9,8 +9,8 @@
     max-width: 65%;
     min-width: 65%;
 
-    background-color: var(--blue-300);
-    background-image: url('../images/background.svg');
+    background-color: var(--blue-350);
+    // background-image: url('../images/background.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: ceil(0);
