--- a/src/components/DetailArchiveModal/styles.module.scss
+++ b/src/components/DetailArchiveModal/styles.module.scss
@@ -8,7 +8,7 @@
   background-color: rgba(0, 0, 0, 0.26);
 }
 
-.container{
+.container_detailArchiveModal{
   position: fixed;
   transform: translate(-50%, -50%);
 
