--- a/src/components/ActivityContent/styles.module.scss
+++ b/src/components/ActivityContent/styles.module.scss
@@ -1,12 +1,14 @@
-.container{
+.container_ActivityContent{
   position: relative;
   width: 100%;
+  max-height: 100vh;
   background-color: var(--white);
 
   padding: 0 2rem;
-  padding-bottom: 3rem;
+  padding-bottom: 2rem;
+  overflow-y: scroll;
 
-  main{
+  .activityContentMain{
     display: flex;
     flex-direction: column;
 
