--- a/src/components/CreateActivityContent/styles.module.scss
+++ b/src/components/CreateActivityContent/styles.module.scss
@@ -1,6 +1,8 @@
 .container_CreateActivitContent{
   position: relative;
   width: 100%;
+  max-height: 100vh;
+  overflow-y: scroll;
   background-color: var(--white);
   padding: 0 2rem;
   padding-bottom: 3rem;
