--- a/src/components/UpdateActivityContent/styles.module.scss
+++ b/src/components/UpdateActivityContent/styles.module.scss
@@ -4,6 +4,8 @@
   background-color: var(--white);
   padding: 0 2rem;
   padding-bottom: 3rem;
+  max-height: 100vh;
+  overflow-y: scroll;
   
   .main_updateActivityContent{
     display: flex;
