--- a/src/components/ArchivesListContent/ArchiveListContentItem/styles.module.scss
+++ b/src/components/ArchivesListContent/ArchiveListContentItem/styles.module.scss
@@ -17,11 +17,14 @@
     align-items: center;
     padding: 0 1rem;
 
-    div{
+    > div{
       width: 4rem;
       height: 4rem;
       border-radius: 2rem;
       background-color: var(--blue-350);
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     span{
