--- a/src/components/InformationBar/CategoriesList/styles.module.scss
+++ b/src/components/InformationBar/CategoriesList/styles.module.scss
@@ -17,6 +17,7 @@
       span{
         top: 0;
         left: 5%;
+        color: var(--text-gray);
       }
     }
 
@@ -31,6 +32,7 @@
       background-color: var(--gray-50);
       pointer-events: none;
       padding: 0 0.3rem;
+      color: var(--gray-350);
     }
     input{
       width: 100%;
@@ -79,7 +81,7 @@
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
   padding-bottom: 2rem;
 
   .loading{
@@ -116,6 +118,9 @@
         height: 3rem;
         border-radius: 1.5rem;
         background-color: var(--blue-350);
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
 
