fix: bugs at modals and informationBar

--- a/src/components/QuestionItem/styles.module.scss
+++ b/src/components/QuestionItem/styles.module.scss
@@ -5,7 +5,7 @@
   border: 2px solid var(--blue-300);
   border-radius: 7px;
   padding: 0.7rem;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.241);
+  // box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.241);
 
   .category_container{
     margin-top: 1rem;
