--- a/src/components/SelectModalButton/styles.module.scss
+++ b/src/components/SelectModalButton/styles.module.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   user-select: none;
   overflow: hidden;
+  margin-bottom: 0.3rem;
 
   .select_icon{
     min-height: 3.4rem;
