--- a/src/components/SelectModal/styles.module.scss
+++ b/src/components/SelectModal/styles.module.scss
@@ -42,19 +42,10 @@
 
   .main{
     width: 100%;
-    height: 100%;
-    max-height: 25rem;
-    overflow-y: auto;
-    padding: 0.5rem 0;
-    gap: 0.5rem;
+    max-height: 60vh;
+    overflow-y: scroll;
     margin: 0.7rem 0;
     transition: 0.2s ease;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 1rem;
   }
 
   .button_container{
